fixed: instruction box's z-index is now above time-box

--- a/assets/main.css
+++ b/assets/main.css
@@ -201,7 +201,7 @@ h3 {
     background-color: #eaf9d9;
     border-radius: 0.5em;
     position: absolute;
-    z-index: 9;
+    z-index: 8;
     padding: 1rem;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
